@@ -5,8 +5,10 @@ import static org.junit.Assert.assertFalse;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.graphics.RGB;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.JUnit4;
 
-public class PainterTest extends SwtTestCase {
+@RunWith(JUnit4.class) public class  PainterTest extends SwtTestCase {
   @Test public void gradientCurrentRowBackground() throws Exception {
     final Matrix matrix = new Matrix(shell, 0);
     // listenToAll(matrix);
