@@ -4,8 +4,10 @@ import static org.junit.Assert.assertEquals;
 
 import org.junit.Ignore;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.JUnit4;
 
-public class AxisTest {
+@RunWith(JUnit4.class) public class  AxisTest {
 	@Ignore
 	@Test(expected = IllegalArgumentException.class)
 	public void zeroSections() throws Exception {
