@@ -4,8 +4,10 @@ import static org.junit.Assert.assertEquals;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.widgets.Shell;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.JUnit4;
 
-public class SelectionTest {
+@RunWith(JUnit4.class) public class  SelectionTest {
 	@Test
 	public void emptyAxis() throws Exception {
 		Matrix matrix = new Matrix(new Shell(), SWT.None);
